image modal fixes on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,12 @@ textarea{
   background-color: rgba(0, 0, 0, 0) !important;
 }
 
+@media screen and (max-width: 600px){
+  .slick-slide > div{
+      height:100%;
+  }
+}
+
 /* @media screen and (-webkit-min-device-pixel-ratio:0) { 
 .h-screen{
   margin-bottom: px;
